tests/ui/type-alias/issue-62305-self-assoc-ty.rs
type Alias = Self::Target;
//~^ ERROR failed to resolve: `Self`

fn main() {}
